--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.4.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.bridgelabz</groupId>
+    <groupId>org.example</groupId>
     <artifactId>EmployeePayrollApp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>EmployeePayrollApp</name>
@@ -59,6 +59,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
