--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=EmployeePayrollApp
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/payroll_service
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll
 spring.datasource.username=root
-spring.datasource.password=iloveIndia#1
+spring.datasource.password=pass123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
